--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Gerson Roa</title>
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Gerson Roa</title>
+    <meta name="viewport"
+    content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
 
-    <body>
-        <div id="app"></div>
-    </body>
+    <link rel="canonical" href="">
+    <meta name="author" content="Gerson Roa">
+    <link rel="manifest" href="assets/manifest.json">
+    <meta name="description" content="Mi curriculum viate.... ">
+    <meta name="keywords" content="gerson, roa, react">
+
+    <meta name="twitter:card" contet="summary_larga_image">
+    <meta name="twitter:site" contet="@gndx">
+    <meta name="twitter:creater" contet="@gndx">
+    <meta name="twitter:title" contet="gerson roa">
+    <meta name="twitter:description" contet="Mi curriculum viate.... ">
+    <meta name="twitter:image" content="">
+
+    <meta name="og:locale" content="en_US">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="gerson roa">
+    <meta name="og:description" content="Mi Curriculum vitae...">
+    <meta name="og:url" content="">
+    <meta name="og:site_name" content="">
+    <meta name="og:image" content="">
+    
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
